--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   bloc: ^3.0.0
   flutter_bloc: ^3.2.0
   http: ^0.12.0+4
+  flutter_secure_storage: ^3.3.1+1
 
 dev_dependencies:
   flutter_test:
