--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   flutter_bloc: ^3.2.0
   http: ^0.12.0+4
   flutter_secure_storage: ^3.3.1+1
-
+  keyboard_avoider: ^0.1.2
+  commons: ^0.7.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
