--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_secure_storage: ^3.3.1+1
   keyboard_avoider: ^0.1.2
   commons: ^0.7.5
+  pull_to_refresh: ^1.5.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
